[package]
name = "gateway-mfr"
version = "0.1.8-dev"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "gateway_mfr"
path = "src/main.rs"
doc = false

[dependencies]
structopt = "0"
anyhow = "1"
semver = "0"
serde = "1"
rand = "0.8"
serde_json = "1"
angry-purple-tiger = "0"
helium-crypto = { git="https://github.com/while-one/helium-crypto-rs.git", rev="347405da0347d4d5f50d898d4c47265cef417c02", features = ["ecc608"]}

